[project]
name = "did-peer-2"
version = "0.1.0"
description = "An implementation of did:peer:2"
authors = [
    {name = "Daniel Bluhm", email = "dbluhm@pm.me"},
]
dependencies = [
    "base58>=2.1.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "Apache-2.0"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.2",
    "black>=23.10.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
]
