[project]
name = "did-peer-2"
version = "0.1.1.post0"
description = "An implementation of did:peer:2"
authors = [
    {name = "Daniel Bluhm", email = "dbluhm@pm.me"},
]
dependencies = [
    "base58>=2.1.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "Apache-2.0"}

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.2",
    "black>=23.10.0",
    "ruff>=0.1.0",
    "pre-commit>=3.5.0",
    "pytest-ruff>=0.1.1",
]

[tool.pdm.build]
includes = ["did_peer_2.py"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pytest.ini_options]
addopts = "--doctest-glob README.md --ruff"

[tool.ruff]
select = ["E", "F", "C", "D"]

ignore = [
    # Google Python Doc Style
    "D203", "D204", "D213", "D215", "D400", "D401", "D404", "D406", "D407",
    "D408", "D409", "D413",
    "D202", # Allow blank line after docstring
]

line-length = 90

[tool.ruff.per-file-ignores]
"**/{tests}/*" = ["F841", "D", "E501"]
